--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/doge.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Blazze - Exprees Framework</title>
+    <meta name="description" content="A light-weight express framework to write typesafe API's with zero configuration, no boiler-plate blazingly fast. Blazze.js is a powerful and lightweight JavaScript framework designed to simplify web development. With a focus on simplicity and performance, Blazze.js provides a set of features that make building web applications a breeze.">
+    <link rel="author" href="https://axn.vercel.app">
+    <meta name="author" content="axn">
+    <meta name="keywords" content="React,Tailwind CSS,Server Components,Exprees,Blazze.js,Web Framework">
+    <meta name="creator" content="shadcn">
+    <meta property="og:title" content="shadcn/ui">
+    <meta property="og:description" content="A light-weight express framework to write typesafe API's with zero configuration, no boiler-plate blazingly fast. Blazze.js is a powerful and lightweight JavaScript framework designed to simplify web development. With a focus on simplicity and performance, Blazze.js provides a set of features that make building web applications a breeze.">
+    <meta property="og:url" content="https://blazze.vercel.app/">
+    <meta property="og:site_name" content="Blazze.js">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="https://blazze.vercel.app/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta content="Blazze.js" property="og:image:alt">
+    <meta content="website" property="og:type">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@axnjrno1">
+    <meta name="twitter:title" content="Blazze.js">
   </head>
   <body>
     <div id="root"></div>
