--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "k4mhsumy0a");
+    })(window, document, "clarity", "script", "kokog7gke6");
   </script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
