docs: site logo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/doge.webp" />
+  <link rel="icon" type="image/svg+xml" href="/lo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blazze - Exprees Framework</title>
+  <title>Blazze v1.3.2 - Lightweight Exprees Framework</title>
   <meta name="description"
     content="A light-weight express framework to write typesafe API's with zero configuration, no boiler-plate blazingly fast. Blazze.js is a powerful and lightweight JavaScript framework designed to simplify web development. With a focus on simplicity and performance, Blazze.js provides a set of features that make building web applications a breeze.">
   <link rel="author" href="https://axn.vercel.app">
